--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 <html lang="en">
   <head>
     <title>Sarah's Marvel API Project 1</title>
-    <meta name="description" content="A cool thing made with Glitch">
+    <meta name="description" content="Marvel API Project 1">
     <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="/style.css">
     
     <!-- import the webpage's client-side javascript file -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
     <script src="/client.js" defer></script>
   </head>
   <body>
