--- a/views/index.html
+++ b/views/index.html
@@ -21,8 +21,7 @@
     <link rel="stylesheet" href="/style.css">
     
     <!-- import the webpage's client-side javascript file -->
-    
-    <script src="/client.js" defer></script>
+   
   </head>
   <body>
     <header>
@@ -30,15 +29,6 @@
     </header>
 
     <body>
-      <style type="text/css">
-              .panel {
-                height: 100%;
-                width: 100%;
-              }
-              .panel.green {
-                margin-bottom: 400px
-              }
-        </style>
          <section class="panel blue">
               <b>ONE</b>
         </section>
@@ -51,29 +41,6 @@
         <section class="panel bordeaux">
               <b>FOUR</b>
         </section>
-        <script>
-              $(function () { // wait for document ready
-                // init
-                var controller = new ScrollMagic.Controller({
-                  globalSceneOptions: {
-                    triggerHook: 'onLeave'
-                  }
-                });
-
-                // get all slides
-                var slides = document.querySelectorAll("section.panel");
-
-                // create scene for every slide
-                for (var i=0; i<slides.length; i++) {
-                  new ScrollMagic.Scene({
-                      triggerElement: slides[i]
-                    })
-                    .setPin(slides[i])
-                    .addIndicators() // add indicators (requires plugin)
-                    .addTo(controller);
-                }
-              });
-          </script>
       
     </body>
 
@@ -85,6 +52,8 @@
           to make it easier for folks to view source and remix -->
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <script src="https://button.glitch.me/button.js"></script>
-
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
+     <script src="/client.js"></script>
   </body>
 </html>
