--- a/public/style.css
+++ b/public/style.css
@@ -7,18 +7,34 @@
 
 body {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
-  margin: 2em;
+  margin: 0 auto;
 }
+
 
 .panel {
-    height: 100%;
-    width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
-.panel.green {
+.panel .green {
   margin-bottom: 400px;
 }
 
+.blue { 
+  background-color: blue;
+}
+
+.green { 
+  background-color: green;
+}
+
+.turqoise { 
+  background-color: red;
+}
+
+.bordeaux { 
+  background-color: maroon;
+}
 
 
 
