--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,8 @@
 }*/
 
 body {
-  font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
+  /* font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif; */ 
+  font-family: 'Playfair Display', serif;
   margin: 0 auto;
 }
 
