--- a/views/index.html
+++ b/views/index.html
@@ -20,6 +20,7 @@
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/joj8flu.css">
     
     <!-- import the webpage's client-side javascript file -->
    
