--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,15 @@
 
     <body>
          <section class="panel blue">
-              <b>ONE</b>
+              <div class="flex intro-panel">
+                 <h1>
+                    MARVEL: A PRIMER
+                </h1>
+                <br>
+                <h2 id="intro-subheading">
+                  but like, for dummies 
+                </h2>
+             </div>
         </section>
         <section class="panel turqoise">
               <b>TWO</b>
@@ -41,6 +49,9 @@
         </section>
         <section class="panel bordeaux">
               <b>FOUR</b>
+        </section>
+      <section class="panel white">
+              <b>FIVE</b>
         </section>
       
     </body>
