🍙🌊 Checkpoint ./views/index.html:3126019/977 ./public/style.css:3126019/1041

--- a/views/index.html
+++ b/views/index.html
@@ -31,15 +31,18 @@
 
     <body>
          <section class="panel blue">
-              <div class="flex intro-panel">
-                 <h1>
-                    MARVEL: A PRIMER
-                </h1>
-                <br>
-                <h2 id="intro-subheading">
-                  but like, for dummies 
-                </h2>
-             </div>
+             <div class="flex-column">
+               <div class="flex intro-panel">
+                   <h1>
+                      MARVEL: <span id="outline">A PRIMER</span>
+                  </h1>
+               </div>
+               <div class="flex">
+                  <h2 id="intro-subheading">
+                    (but like, for dummies)
+                  </h2>
+               </div>
+           </div> 
         </section>
         <section class="panel turqoise">
               <b>TWO</b>
