--- a/public/style.css
+++ b/public/style.css
@@ -61,8 +61,29 @@ h2 {
   align-items: center;
 }
 
+.flex-column{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 /* panel 1 */
 
 
+.intro-panel { 
+  color: white;
+  font-size: 60px;
+}
+#outline {
+  -webkit-text-fill-color: maroon;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: white;
+}
+#intro-subheading {
+  color: white;
+  font-weight: 700;
+  font-style: italic;
+  font-size: 30px;
+}
 
