--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,7 @@
 
     <body>
          <section class="panel blue">
-             <div class="flex-column">
+             <div class="center">
                <div class="flex intro-panel">
                    <h1>
                       MARVEL: <span id="outline">A PRIMER</span>
