--- a/views/index.html
+++ b/views/index.html
@@ -44,8 +44,25 @@
                </div>
            </div> 
         </section>
-        <section class="panel turqoise">
-              <b>TWO</b>
+        <section class="panel off-white">
+             <div class="grid-2 flex">
+               <div id="panel-2-title">
+                  <h1>
+                    IMAGINE THIS
+                 </h1>
+               </div>
+               <div id="panel-2-text">
+                  <p>
+                    BLAH 
+                    BLAH
+                    BLAHH
+                 </p>
+               </div>
+               <div id="panel-2-footer">
+                <p>
+                   look no further
+                 </p>  
+               </div>
         </section>
         <section class="panel green">
               <b>THREE</b>
