--- a/views/index.html
+++ b/views/index.html
@@ -46,16 +46,24 @@
         </section>
         <section class="panel off-white">
              <div class="grid-2 flex">
+               
                <div id="panel-2-title">
                   <h1>
-                    IMAGINE THIS
+                    IMAGINE THIS:
                  </h1>
                </div>
                <div id="panel-2-text">
                   <p>
-                    BLAH 
-                    BLAH
-                    BLAHH
+                    01. You’re on a date with your Future Spouse (they just don’t know it yet. it's your first date. you're not crazy, we get it.) <br>
+                    02. Everything is going great until <br>
+                    03. They start talking about how they can’t live without Marvel <br>
+                    04. becaaaaauuuusee <br>
+                    05. You actually hate Marvel movies and have avoided watching them for your entire life, but you panic so you say: <br>
+                    06. <span id="bold">"OMG I LOVE MARVEL MOVIES.</span> I’ve been like, the hugest fan of them since childhood.” <br>
+                    07. Oh no. <br>
+                    08. But it gets worse because you just made plans to watch Avengers End Game AKA God Please End My Life or whatever with them <br>
+                    09. You quickly dismiss yourself to the bathroom and start frantically Googling <br>
+                    10. And now you have about 5 minutes to become the leading Marvel expert and act like you are So Into This™ <br>
                  </p>
                </div>
                <div id="panel-2-footer">
@@ -63,6 +71,7 @@
                    look no further
                  </p>  
                </div>
+              
         </section>
         <section class="panel green">
               <b>THREE</b>
