--- a/views/index.html
+++ b/views/index.html
@@ -54,21 +54,21 @@
                </div>
                <div id="panel-2-text">
                   <p>
-                    01. You’re on a date with your Future Spouse (they just don’t know it yet. it's your first date. you're not crazy, we get it.) <br>
-                    02. Everything is going great until <br>
-                    03. They start talking about how they can’t live without Marvel <br>
-                    04. becaaaaauuuusee <br>
-                    05. You actually hate Marvel movies and have avoided watching them for your entire life, but you panic so you say: <br>
-                    06. <span id="bold">"OMG I LOVE MARVEL MOVIES.</span> I’ve been like, the hugest fan of them since childhood.” <br>
-                    07. Oh no. <br>
-                    08. But it gets worse because you just made plans to watch Avengers End Game AKA God Please End My Life or whatever with them <br>
+                    <span class="bold">01.</span> You’re on a date with your Future Spouse (they just don’t know it yet. it's your first date. you're not crazy, we get it.) <br>
+                    <span class="bold">02.</span> Everything is going great until <br>
+                    <span class="bold">03.</span> They start talking about how they can’t live without Marvel <br>
+                    <span class="bold">04.</span> becaaaaauuuusee <br>
+                    <span class="bold">05.</span> You actually hate Marvel movies and have avoided watching them for your entire life, but you panic so you say: <br>
+                    <span class="bold">06.</span> <span class="bold">"OMG I LOVE MARVEL MOVIES.</span> I’ve been like, the hugest fan of them since childhood.” <br>
+                    <span class="bold"> 07.</span> Oh no. <br>
+                    <span class="bold"> 08.</span> But it gets worse because you just made plans to watch Avengers End Game AKA God Please End My Life or whatever with them <br>
                     09. You quickly dismiss yourself to the bathroom and start frantically Googling <br>
                     10. And now you have about 5 minutes to become the leading Marvel expert and act like you are So Into This™ <br>
                  </p>
                </div>
                <div id="panel-2-footer">
                 <p>
-                   look no further
+                   Look no further, my friend
                  </p>  
                </div>
               
