🎽🌟 Checkpoint ./views/index.html:3126019/806 ./public/style.css:3126019/6

--- a/public/style.css
+++ b/public/style.css
@@ -24,7 +24,7 @@ h2 {
   font-family: 'Playfair Display', serif;
 }
 
-#bold {
+.bold {
   font-weight: 700;
 }
   
@@ -126,6 +126,6 @@ h2 {
   font-family: 'Playfair Display', serif;
   font-weight: 900;
   font-style: italic;
-  font-size: 40px;
+  font-size: 35px;
   text-align: center;
 }
