--- a/views/index.html
+++ b/views/index.html
@@ -59,19 +59,23 @@
                     <span class="bold">03.</span> They start talking about how they can’t live without Marvel <br>
                     <span class="bold">04.</span> becaaaaauuuusee <br>
                     <span class="bold">05.</span> You actually hate Marvel movies and have avoided watching them for your entire life, but you panic so you say: <br>
-                    <span class="bold">06.</span> <span class="bold">"OMG I LOVE MARVEL MOVIES.</span> I’ve been like, the hugest fan of them since childhood.” <br>
+                    <span class="bold">06. "OMG I LOVE MARVEL MOVIES.</span> I’ve been like, the hugest fan of them since childhood.” <br>
                     <span class="bold"> 07.</span> Oh no. <br>
                     <span class="bold"> 08.</span> But it gets worse because you just made plans to watch Avengers End Game AKA God Please End My Life or whatever with them <br>
-                    09. You quickly dismiss yourself to the bathroom and start frantically Googling <br>
-                    10. And now you have about 5 minutes to become the leading Marvel expert and act like you are So Into This™ <br>
+                    <span class="bold">09.</span> You quickly dismiss yourself to the bathroom and start frantically *~*Googling*~* <br>
+                    <span class="bold">10.</span> And now you have about 5 minutes to become the leading Marvel expert and act like you are So Into This™ <br>
                  </p>
                </div>
                <div id="panel-2-footer">
+                 
+                   <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" 
+                        viewbox="0 0 283.32 371.49"><defs><style>.cls-1{fill:none;stroke:#881d1d;stroke-miterlimit:10;stroke-width:7px;}</style></defs><title>yay</title><line class="cls-1" x1="228.61" y1="89.58" x2="133.61" y2="2.58"/><line class="cls-1" x1="219.61" y1="128.58" x2="0.61" y2="89.58"/><line class="cls-1" x1="220.11" y1="185.08" x2="100.61" y2="223.58"/><line class="cls-1" x1="245.11" y1="233.08" x2="75.11" y2="359.08"/><line class="cls-1" x1="280.11" y1="272.08" x2="237.11" y2="370.08"/></svg>
+              
                 <p>
-                   Look no further, my friend
+                   Look no further
                  </p>  
                </div>
-              
+          </div>
         </section>
         <section class="panel green">
               <b>THREE</b>
