🐯⚓️ Checkpoint ./public/style.css:3126019/17 ./views/index.html:3126019/702

--- a/views/index.html
+++ b/views/index.html
@@ -75,7 +75,11 @@
           </div>
         </section>
         <section class="panel green">
-              <b>THREE</b>
+          <div class="grid-3 flex">
+            <div class="panel-3-title">
+              01. BA
+            </div>
+          </div>
         </section>
         <section class="panel bordeaux">
               <b>FOUR</b>
