🛥🐓 Checkpoint ./views/index.html:3126019/3428 ./public/style.css:3126019/2458 ./server.js:3126019/2421

--- a/public/style.css
+++ b/public/style.css
@@ -130,5 +130,19 @@ h2 {
   text-align: center;
 }
 
+/* panel 3 */
+.grid-3 {
+  display:grid;
+  grid-template-columns: fr;
+  grid-template-rows: 200px 600px;
+}
+
+.item { 
+  align-self: flex-end;
+}
+
+
 /* slider */
+
+
 
