--- a/views/index.html
+++ b/views/index.html
@@ -76,8 +76,13 @@
         </section>
         <section class="panel green">
           <div class="grid-3 flex">
-            <div class="panel-3-title">
-              01. BA
+            <div class="panel-3-title item">
+              01. BACKROUND <br> 
+              welcome to my Ted Talk!! 
+            </div>
+            <div class="slider">
+              insert slider here
+                    
             </div>
           </div>
         </section>
