🖐🐊 Checkpoint ./views/index.html:3126019/3209 ./server.js:3126019/782 ./public/client.js:3126019/796 ./public/style.css:3126019/137 ./.glitch-assets:3126019/487

--- a/public/style.css
+++ b/public/style.css
@@ -133,16 +133,17 @@ h2 {
 /* panel 3 */
 .grid-3 {
   display:grid;
-  grid-template-columns: fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 200px 600px;
 }
+
+.panel-3-title {
+  grid-template-row: 
+} 
 
 .item { 
   align-self: flex-end;
 }
-
-
-/* slider */
 
 
 
