--- a/views/index.html
+++ b/views/index.html
@@ -75,15 +75,15 @@
           </div>
         </section>
         <section class="panel green">
-          <div class="grid-3 flex">
+          <div class="grid-3">
             <div class="panel-3-title item">
               01. BACKROUND <br> 
               welcome to my Ted Talk!! 
             </div>
-            <div class="slider">
-              insert slider here
-                    
+            <div>
+              blah blah blah 
             </div>
+            
           </div>
         </section>
         <section class="panel bordeaux">
