🎐🏰 Checkpoint ./public/style.css:3126019/494 ./views/index.html:3126019/307

--- a/public/style.css
+++ b/public/style.css
@@ -133,13 +133,29 @@ h2 {
 /* panel 3 */
 .grid-3 {
   display:grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 5% 27% 5% 27% 5% 27% 5%;
   grid-template-rows: 200px 600px;
 }
 
-.panel-3-title {
-  grid-template-row: 
+.panel-3-titles {
+  grid-column: 3/6;
+  background-color: white;
 } 
+
+.heroes {
+  grid-column: 2/3;
+  background-color: white;
+}
+
+.aliens {
+  grid-column: 4/5;
+  background-color: white;
+}
+
+.fights {
+  grid-column: 6/7;
+  background-color: white;
+}
 
 .item { 
   align-self: flex-end;
