--- a/views/index.html
+++ b/views/index.html
@@ -76,12 +76,20 @@
         </section>
         <section class="panel green">
           <div class="grid-3">
-            <div class="panel-3-title item">
+            <div class="panel-3-titles item">
               01. BACKROUND <br> 
               welcome to my Ted Talk!! 
             </div>
-            <div>
-              blah blah blah 
+            <div class="heroes">
+              heroes
+            </div>
+            
+            <div class="aliens">
+              aliens
+            </div>
+            
+            <div class="fights">
+              fights
             </div>
             
           </div>
