🎫🏜 Checkpoint ./views/index.html:3126019/5503

--- a/views/index.html
+++ b/views/index.html
@@ -77,29 +77,53 @@
         <section class="panel green">
           <div class="grid-3">
             <div class="panel-3-titles item">
-              01. BACKROUND <br> 
+              01. CHARACTERS <br> 
               welcome to my Ted Talk!! 
             </div>
-            <div class="heroes">
+            <div class="iron-man">
               heroes
             </div>
             
-            <div class="aliens">
+            <div class="captain-america">
               aliens
             </div>
             
-            <div class="fights">
+            <div class="thor">
               fights
+            </div>
+            
+            <div class="">
+              heroes
             </div>
             
           </div>
         </section>
         <section class="panel bordeaux">
-              <b>FOUR</b>
+              <div class="grid-2 flex">
+               
+               <div id="panel-3-title">
+                  <h1>
+                    IMAGINE THIS:
+                 </h1>
+               </div>
+               <div id="chart">
+                  
+                 
+               </div>
+               <div id="panel-3-footer">
+                <p>
+                   Look no further
+                 </p>  
+                </div>
+          </div>
         </section>
+      
       <section class="panel white">
-              <b>FIVE</b>
-        </section>
+       <p>
+          last section 
+        </p>
+        
+      </section>
       
     </body>
 
