--- a/views/index.html
+++ b/views/index.html
@@ -92,7 +92,15 @@
               fights
             </div>
             
-            <div class="">
+            <div class="black-widow">
+              heroes
+            </div>
+            
+            <div class="black-panther">
+              heroes
+            </div>
+            
+            <div class="spider-man">
               heroes
             </div>
             
@@ -103,8 +111,11 @@
                
                <div id="panel-3-title">
                   <h1>
-                    IMAGINE THIS:
+                    CHARTS
                  </h1>
+                 <h2>
+                   For the mathy poeple out there
+                 </h2>
                </div>
                <div id="chart">
                   
