--- a/views/index.html
+++ b/views/index.html
@@ -22,6 +22,8 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/joj8flu.css">
     
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    
    
   </head>
   <body>
