--- a/views/index.html
+++ b/views/index.html
@@ -120,8 +120,9 @@
                  </h2>
                </div>
                <div id="chart">
-                  
-                 
+                
+                   <canvas id="myChart"></canvas>
+              
                </div>
                <div id="panel-3-footer">
                 <p>
@@ -146,10 +147,19 @@
 
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
+    
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script>
+      window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')
+    </script>
     <script src="https://button.glitch.me/button.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.0/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+     <script src="/client.js" defer></script>
      <script src="/client.js"></script>
   </body>
 </html>
