--- a/views/index.html
+++ b/views/index.html
@@ -41,7 +41,7 @@
                </div>
                <div class="flex">
                   <h2 id="intro-subheading">
-                    (but like, for dummies)
+                    (for dummies)
                   </h2>
                </div>
            </div> 
@@ -115,9 +115,7 @@
                   <h1>
                     CHARTS
                  </h1>
-                 <h2>
-                   For the mathy poeple out there
-                 </h2>
+                 
                </div>
                <div id="chart">
                 
@@ -142,24 +140,22 @@
     </body>
 
     <footer>
-      Made with <a href="https://glitch.com">Glitch</a>!
+     YAY!
     </footer>
 
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
     
-    <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>
       window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')
     </script>
-    <script src="https://button.glitch.me/button.js"></script>
+    
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.0/TweenMax.min.js"></script>
+    <!-- Charts.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
      <script src="/client.js" defer></script>
-     <script src="/client.js"></script>
   </body>
 </html>
