🙄🎊 Checkpoint ./public/client.js:3126019/990 ./views/index.html:3126019/10 ./public/style.css:3126019/27 ./server.js:3126019/558

--- a/public/style.css
+++ b/public/style.css
@@ -131,11 +131,10 @@ h2 {
 }
 
 /* panel 3 */
-.grid-3 {
+/* .grid-3 {
   display:grid;
   grid-template-columns: 10px 1fr 1fr 1fr 10px;
   grid-template-rows: 75px 300px 300px;
-  grid-gap: 5px;
 }
 
 .panel-3-titles {
@@ -177,7 +176,7 @@ h2 {
   grid-column: 4/5;
   grid-row: 3/4;
   background-color: white;
-}
+} */
 
 .item { 
   align-self: flex-end;
