--- a/views/index.html
+++ b/views/index.html
@@ -76,7 +76,7 @@
                </div>
           </div>
         </section>
-        <section class="panel green">
+        <!--<section class="panel green">
           <div class="grid-3">
             <div class="panel-3-titles item">
               01. CHARACTERS <br> 
@@ -107,7 +107,7 @@
             </div>
             
           </div>
-        </section>
+        </section> -->
         <section class="panel bordeaux">
               <div class="grid-2 flex">
                
