--- a/views/index.html
+++ b/views/index.html
@@ -113,7 +113,7 @@
                
                <div id="panel-3-title">
                   <h1>
-                    CHARTS
+                    THIS IS A CHART.
                  </h1>
                  
                </div>
