--- a/public/style.css
+++ b/public/style.css
@@ -130,6 +130,13 @@ h2 {
   text-align: center;
 }
 
+#panel-3-title {
+  text-align: center;
+  vertical-align: bottom!important;
+  margin-top: 30px!important;
+  font-size: 45px;
+}
+
 /* panel 3 */
 /* .grid-3 {
   display:grid;
