💾🏝 Checkpoint ./server.js:3126019/2 ./public/style.css:3126019/137 ./views/index.html:3126019/78 ./public/client.js:3126019/58

--- a/views/index.html
+++ b/views/index.html
@@ -119,12 +119,12 @@
                </div>
                <div id="chart">
                 
-                   <canvas id="myChart"></canvas>
+                   <canvas id="theChart"></canvas>
               
                </div>
                <div id="panel-3-footer">
                 <p>
-                   Look no further
+                   Data from Marvel.com
                  </p>  
                 </div>
           </div>
